fix: add fix for missing spacing in Multi Combobox secondary data in IE11  (#1939)
* initial commit

* remove leftover

* revert display

* remove the display contents for multi input

--- a/src/_listDropdown.scss
+++ b/src/_listDropdown.scss
@@ -20,6 +20,12 @@
         padding: $fd-dropdown-vertical-compact-padding $fd-list-item-padding-x;
       }
     }
+
+    .#{$block}__secondary {
+      width: auto;
+      max-width: 15rem;
+      display: contents;
+    }
   }
 
   &--multi-input {
@@ -60,6 +66,14 @@
             right: $fd-multi-input-focus-offset;
           }
         }
+      }
+    }
+
+    .#{$block}__secondary {
+      padding-right: 1rem;
+
+      @include fd-rtl() {
+        padding-left: 1rem;
       }
     }
 
@@ -130,12 +144,6 @@
       &:first-child:last-child {
         max-width: 37.5rem;
       }
-    }
-
-    .#{$block}__secondary {
-      width: auto;
-      max-width: 15rem;
-      display: contents;
     }
 
     .#{$block}__icon {
